# extensions/common/api/api-core/src/main/java/org/eclipse/edc/api/model/CriterionDto.java
@@ -17,7 +17,6 @@ package org.eclipse.edc.api.model;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonPOJOBuilder;
-import jakarta.validation.constraints.NotNull;
 
 import static org.eclipse.edc.spi.CoreConstants.EDC_NAMESPACE;
 
@@ -25,14 +24,12 @@ import static org.eclipse.edc.spi.CoreConstants.EDC_NAMESPACE;
 public class CriterionDto extends BaseDto {
 
     // constants for JSON-LD transformation
+    public static final String CRITERION_TYPE = EDC_NAMESPACE + "CriterionDto";
     public static final String CRITERION_OPERAND_LEFT = EDC_NAMESPACE + "operandLeft";
     public static final String CRITERION_OPERAND_RIGHT = EDC_NAMESPACE + "operandRight";
     public static final String CRITERION_OPERATOR = EDC_NAMESPACE + "operator";
-    public static final String CRITERION_TYPE = EDC_NAMESPACE + "CriterionDto";
 
-    @NotNull(message = "operandLeft cannot be null")
     private Object operandLeft;
-    @NotNull(message = "operator cannot be null")
     private String operator;
     private Object operandRight;
 
