# resources/openapi/yaml/management-api/policy-definition-api.yaml
@@ -210,7 +210,7 @@ components:
       example: null
       properties:
         invalidValue:
-          type: string
+          type: object
           example: null
         message:
           type: string
@@ -251,9 +251,6 @@ components:
         operator:
           type: string
           example: null
-      required:
-      - operandLeft
-      - operator
     Duty:
       type: object
       example: null
